src/styles/index.scss
@import "./extensions.scss";

:root{
  --bg-dark: #23282E;
  --bg-light: #F4F4F4;
  --text-dark: #2d2d2d;
  --text-light: #f1f1f1;
  --bg-primary: #f6e6d9;
  --text-primary: #f6e6d9;
  --bg-secondary: #68382e;
  --text-secondary: #68382e;
  --bg-accent: #ca3c6c;
  --text-accent: #ca3c6c;
  --light-copper: #cd876d;
}


.dark{
  --bg-color: var(--bg-dark);
  --text-color: var(--text-light);
}

.light{
  --bg-color: var(--bg-light);
  --text-color: var(--text-dark);
}

body{
  background-color: var(--bg-color);
  color: var(--text-color);
  transition: background 500ms ease-in-out, color 850ms ease-in-out;
}

a{
  color: currentColor;

  &:hover, &:active{
    color: var(--text-primary);
  }
}

.block-link:hover{
  color: var(--text-dark);
  background-color: var(--bg-primary);
}

.App{
  // display: flex;
  // flex-direction: row;
  // background-color: #f7f9fc;
}

#sidebar{
  // height: 100vh;
  width: 280px;
  transition: width 0.1s ease;
}

#sidebar-inner{
  height: 100vh;
  width: 280px;
  transition: width 0.1s ease;
}

#sidebar.collapsing{
  width: 0;
  overflow: hidden;
}

#sidebar.collapsing #sidebar-inner{
  width: 0;
  overflow: hidden;
}

#sidebar-toggler{
  position: absolute;
  left: 0;
  top: 0;
}

#logo i{
  font-size: 32px;
}

.card{
  background-color: var(--bg-color);
  color: var(--text-color);
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  border: none;
}

.color-block{
  width: 100%;
  height: 100%;
  min-height: 400px;
  display: block;
  border-radius: 0.25rem 0.25rem 0 0;

  @media (max-width: 576px){
    min-height: 200px;
    border-radius: 0.25rem 0 0 0.25rem;
  }

  @media (min-width: 2200px){
    min-height: 100px;
    border-radius: 0.25rem 0 0 0.25rem;
  }

}

.code{
  font-family: monospace;
  padding: 0.5rem 0.75rem;
  /* border: 1px solid #0000ef; */
  background-color: #efefff;
  border-radius: 0.25rem;
  font-size: 16px;
  color: #0000ef;
}

.color-code{
  width: 50px;
}

.dropdown-menu{
  background-color: var(--bg-color);
  color: var(--text-color);
}

.dropdown-item{
  background-color: var(--bg-color);
  color: var(--text-color);
}

.dropdown-item:hover{
  background-color: var(--bg-primary);
  color: var(--bg-color);
}


.dropdown-menu-horizontal.show{
  display: flex;
  flex-direction: row;
  padding: 0;
  border: none;
  border-radius: unset;
  border-top: 1px solid rgba(0, 0, 0, 0.15);
  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
  transform: translate(0px, 64px) !important;
}

.dropdown-menu-horizontal.full-width{
  width: 100%;
}

.pos-initial{
  position: initial;
}

.dropdown-column{
  border-right:1px solid rgba(0, 0, 0, 0.15);
  padding: 0.5rem 0;
}

.continuous{
  border-right: none;
}

.dropdown-column:last-of-type{
  border-right: none;
}

.minipalette{
  display: flex;
}

.minipalette .palette-block{
  width: 64px;
  height: 64px;
  border-radius: 50%;
  box-shadow: 0 0.5rem 0.5rem rgba(#000, 0.15);

  &:not(:first-of-type){
    margin-left: -24px;
  }

}

.megapalette{
  display: flex;
}

.megapalette .palette-block{
  width: 150%;
  border-radius: 50%;
  box-shadow: 0 0.5rem 0.5rem rgba(#000, 0.15);
  margin-left: -25%;

  &:after {
    content: "";
    display: block;
    padding-bottom: 100%;
  }

}

.hero{
  min-height: 300px;
  max-height: 900px;
  height: 66vh;
}

button.nav-link:hover{
  background-color: rgba(13,110,253, 0.2);
}

.bi-caret-right{
  transition: transform 0.25s linear;
  transform: rotate(0);
  &.active{
    transform: rotate(90deg);
  }
}

.text-shadow{
  text-shadow: 2px 2px 10px #111;
}

#navbar{
  border-bottom: 1px solid var(--text-color);
}


.collapse.width{
  width: 0;
  -webkit-transition: width 0.35s ease;
  -moz-transition: width 0.35s ease;
  -o-transition: width 0.35s ease;
  transition: width 0.35s ease;
}

.collapse.width.show {
  width: auto;
  flex-grow: 1;
}

.collapsing.width {
  transition: width 0.35s ease;
}

.imageHeader{
  // height: clamp(200px, 50%, 800px);
  height: 100%;
  padding-right: 0.75rem;
  padding-left: 0.75rem;
}


#vac{
  height: calc(100vh - 65px);

  .vac-section.open{
    flex-grow: 1;
  }

  .section-content{
    max-height: calc(100vh - 65px);
    // overflow-y: scroll;
    // padding-right: 0.75rem;
    // padding-left: 0.75rem;
  }

  .section-title{
    // min-width: calc(6rem + 2px);
    border-left: 1px solid var(--text-color);
    border-right: 1px solid var(--text-color);

    @media (max-width: 576px) {
      min-width: calc(1.525rem + 3.3vw + 2rem + 1.5px);
    }

    @media (min-width: 577px) and (max-width: 1200px) {
      min-width: calc(1.76rem + 3.3vw + 2rem + 1.5px);
    }
  }

  .section-title a{
    padding: 1rem;
    line-height: 1;
    writing-mode: vertical-rl;
    text-orientation: mixed;
    // transform: rotate(-180deg);
  }
}

